3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix Doxygen stuff, no functional changes.
 types/clock/clock.c
 types/spell_effect/spell_effect.c
 types/exit/exit.c
Nicolas Weeger 2007-04-07

Enable polymorph spell. Will need tweaking, quite certainly.
 include/sproto.h
 server/spell_util.c
 server/spell_effect.c
Nicolas Weeger 2007-04-07

Add 'Crossfire.WhatIsEvent()' to get event object.
 plugins/cfpython/cfpython_object.c: don't put a destroy hook in a destroy hook :)
 plugins/cfpython/cfpython.c: WhatIsEvent()
Nicolas Weeger 2007-04-07

Change plugin object event interface to send the event object itself, instead of
its slaying/name values.
 plugins/cfanim/include/cfanim.h
 plugins/cfanim/cfanim.c
 plugins/cfnewspaper/cfnewspaper.c
 plugins/cfpython/include/cfpython.h
 plugins/cfpython/cfpython.c
 plugins/template/include/plugin_template.h
 plugins/template/plugin_template.c
 server/plugins.c
Nicolas Weeger 2007-04-07

 server/swap.c: fix crash with map reset (parameter is map, not path).
Nicolas Weeger 2007-04-06

Add 'Object.Count' property (read-only).
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
Nicolas Weeger 2007-04-06

Fix wrong set/get key checks.
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2007-04-06

Add 'Object.Enemy' property.
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
Nicolas Weeger 2007-04-06

types/legacy/apply.c: fix scrolls not taking direction into account.
Nicolas Weeger 2007-04-06

Remove support for obsolete 'no_pass' attribute.
--
doc/Developers/{objects,spells,map-technical}: Update documentation about
   no_pass attribute.